[package]
name = "tower-jwt"
description = "Tower middleware to parse JWTs on Authorization Bearers"
version = "0.2.0"
license = "Apache-2.0"
repository = "https://github.com/shuttle-hq/tower-jwt"
documentation = "https://docs.rs/tower-jwt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
headers = "0.4.0"
http = "^1.0.0"
jsonwebtoken = "9.2.0"
pin-project = "1.1.5"
serde = { version = "1.0.197", features = ["derive"] }
tower = { version = "0.4.13", default-features = false }
tracing = "0.1.40"

[dev-dependencies]
axum = "0.7.0"
chrono = { version = "0.4.23", features = ["clock", "serde"] }
http-body-util = "0.1.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
ring = "0.17.8"
